@@ -3,8 +3,8 @@ package convex.peer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import convex.core.store.Stores;
-import convex.core.util.LoadMonitor; 
+import convex.core.store.AStore;
+import convex.core.util.LoadMonitor;
 
 /**
  * Base class for a threaded execution component that runs within the context of a Peer Server
@@ -14,24 +14,23 @@ public abstract class AThreadedComponent {
 	private static final Logger log = LoggerFactory.getLogger(AThreadedComponent.class.getName());
 
 	protected final Server server;
-	
-	protected final Thread thread; 
+
+	protected final Thread thread;
 
 	private class ComponentTask implements Runnable {
 		@Override
 		public void run() {
-			// Set Thread-local store for the current Server
-			Stores.setCurrent(server.getStore());
-			
 			// Run main component loop
 			while (server.isRunning()&&!Thread.currentThread().isInterrupted()) {
 				try {
-					loop();		
+					loop();
 				} catch (InterruptedException e) {
 					// Interrupted, so we are exiting
 					log.trace("Component thread interrupted: {}",thread);
 					Thread.currentThread().interrupt();
 					break;
+				} catch (Exception e) {
+					log.error("Unexpected error in component loop: {}",thread,e);
 				}
 			}
 			
@@ -47,12 +46,17 @@ public abstract class AThreadedComponent {
 
 	protected AThreadedComponent(Server server) {
 		this.server=server;
-		this.thread=new Thread(new ComponentTask());
+		// Virtual thread: ideal for IO-bound queue-polling loops, lower memory footprint
+		this.thread=Thread.ofVirtual().unstarted(new ComponentTask());
 	}
 	
 	protected abstract void loop() throws InterruptedException;
 	
 	protected abstract String getThreadName();
+	
+	protected AStore getStore() {
+		return server.getStore();
+	}
 
 	/**
 	 * Start the threaded component
